...
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        includeEstimatedProgressObservation()
        presenter?.viewDidLoad()    // Переносим логику запроса из контроллера в презентер
        webView.navigationDelegate = self
    }
    
    // Переносим логику запроса из контроллера в презентер
...
